Update portfolio content

--- a/index.html
+++ b/index.html
@@ -123,7 +123,14 @@
           </p>
           <p>
             <em>Tech Used:</em> MERN Stack (MongoDB, Express, React, Node.js),
-            Python, Flutter
+            Socket.io
+          </p>
+          <p>
+            <a
+              href="https://niyoghub.com"
+              target="_blank"
+              >View on GitHub</a
+            >
           </p>
         </div>
 
