Update portfolio contenst

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <a
               href="https://niyoghub.com"
               target="_blank"
-              >View on GitHub</a
+              >View Website</a
             >
           </p>
         </div>
