Update portfolio content and summary

--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
     <title>Leonna Almendras | IT Portfolio</title>
     <style>
       body {
-        font-family: "Segoe UI", Tahoma, sans-serif;
-        background-color: #f9f5f1;
-        color: #3d3d3d;
+        font-family: Arial, sans-serif;
+        background-color: #f8f9fa;
+        color: #212529;
         margin: 0;
         padding: 0;
-        line-height: 1.6;
       }
       header {
-        background-color: #c5b9a3;
+        background-color: #343a40;
         color: #fff;
         padding: 2rem 1rem;
         text-align: center;
       }
       header h1 {
         margin: 0;
-        font-size: 2rem;
+        font-size: 2.2rem;
       }
       header p {
         font-size: 1rem;
         margin: 0.3rem 0;
       }
+      a {
+        color: #007bff;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
       main {
-        max-width: 800px;
+        max-width: 900px;
         margin: auto;
         padding: 2rem 1rem;
       }
@@ -36,21 +42,15 @@
         margin-bottom: 2rem;
       }
       h2 {
-        color: #5c4a35;
-        border-bottom: 2px solid #d3c5ad;
+        color: #495057;
+        border-bottom: 2px solid #ced4da;
         padding-bottom: 0.3rem;
-        margin-bottom: 1rem;
       }
       ul {
-        list-style-type: disc;
         padding-left: 1.2rem;
       }
-      .project a {
-        color: #5c4a35;
-        text-decoration: none;
-      }
-      .project a:hover {
-        text-decoration: underline;
+      .project {
+        margin-bottom: 1.5rem;
       }
     </style>
   </head>
@@ -58,53 +58,32 @@
     <header>
       <h1>Leonna Nashtasjia A. Almendras</h1>
       <p>IT Graduate | Web & Mobile Developer | Junior Analyst</p>
-      <p>📍 Lucena City, PH | 📧 almendrasleonna.it@gmail.com</p>
+      <p>📍 Lucban, Quezon, PH | 📧 almendrasleonna.it@gmail.com</p>
       <p>
-        <a href="https://linkedin.com/in/leonna-almendras-" style="color: #fff"
-          >LinkedIn</a
-        >
+        <a href="https://linkedin.com/in/leonna-almendras-" target="_blank">LinkedIn</a>
         |
-        <a href="https://github.com/LeonnaAlmendras-it" style="color: #fff"
-          >GitHub</a
-        >
+        <a href="https://github.com/LeonnaAlmendras-it" target="_blank">GitHub</a>
       </p>
     </header>
+
     <main>
       <section>
-        <h2>About Me</h2>
+        <h2>Professional Summary</h2>
         <p>
-          Cum Laude BS Information Technology graduate with a specialization in
-          Web and Mobile Applications. Passionate about developing efficient and
-          user-centered systems with experience in full-stack development, IT
-          support, and process automation. Eager to contribute to impactful tech
-          initiatives through thoughtful design and agile collaboration.
+          Fresh graduate of BS Information Technology, Cum Laude, with solid hands-on experience in full-stack development, QA testing, and IT support. Proven ability to build responsive web and mobile systems, manage sprint workflows, and document processes clearly. Skilled in troubleshooting, user onboarding, and technical communication. Passionate about building purposeful tech that drives operational efficiency, supports digital transformation, and creates real impact. Actively seeking to grow within innovative, high-integrity teams where technology serves both business goals and broader value creation.
         </p>
       </section>
 
       <section>
-        <h2>Tech Stack & Tools</h2>
+        <h2>Technical Skills</h2>
         <ul>
-          <li>
-            <strong>Languages:</strong> HTML, CSS, JavaScript, PHP, Python,
-            Java, Swift, SQL, TypeScript
-          </li>
-          <li>
-            <strong>Frameworks & Libraries:</strong> React, Flutter, Laravel,
-            CodeIgniter, Django, Tailwind, Express, Socket.io
-          </li>
-          <li><strong>Databases:</strong> MySQL, Firebase, Oracle, MongoDB</li>
-          <li>
-            <strong>Tools:</strong> Git, GitHub, VSCode, Android Studio, Xcode,
-            Figma, Canva, IntelliJ, Postman
-          </li>
-          <li>
-            <strong>Productivity:</strong> Microsoft Office, Google Workspace,
-            Notion, Trello, Jira, Monday, Asana
-          </li>
-          <li>
-            <strong>Other Skills:</strong> Troubleshooting, User Support, UI/UX
-            Design, Agile, Scrum
-          </li>
+          <li><strong>Languages:</strong> HTML, CSS, JavaScript, PHP, Python, Java, Swift, SQL, TypeScript</li>
+          <li><strong>Frameworks & Libraries:</strong> React, Flutter, Laravel, Django, CodeIgniter, Tailwind CSS, Bootstrap, Express, Socket.io</li>
+          <li><strong>Databases:</strong> MySQL, MongoDB, Firebase, Oracle</li>
+          <li><strong>Tools & Platforms:</strong> Git, GitHub, Bitbucket, VSCode, Webflow, Xcode, Android Studio, Canva, Figma, IntelliJ, Postman</li>
+          <li><strong>Operating Systems:</strong> Windows, Linux, macOS</li>
+          <li><strong>Project Management:</strong> Agile, Scrum, Jira, Trello, Notion, Microsoft Office, Google Workspace</li>
+          <li><strong>Soft Skills:</strong> Leadership, Project Coordination, Communication, Time Management, Analytical Thinking, Client Handling, Initiative</li>
         </ul>
       </section>
 
@@ -112,111 +91,60 @@
         <h2>Project Portfolio</h2>
 
         <div class="project">
-          <h3>
-            <a href="https://niyoghub.com" target="_blank"
-              >NiyogHub – Capstone Project</a
-            >
-          </h3>
-          <p>
-            Web and mobile application for coconut farmers with disease
-            detection and AI-powered support to improve agricultural outcomes.
-          </p>
-          <p>
-            <em>Tech Used:</em> MERN Stack (MongoDB, Express, React, Node.js),
-            Socket.io
-          </p>
-          <p>
-            <a
-              href="https://niyoghub.com"
-              target="_blank"
-              >View Website</a
-            >
-          </p>
+          <h3><a href="https://niyoghub.com" target="_blank">NiyogHub – Capstone Project</a></h3>
+          <p>Developed and launched a precision agriculture web and mobile system with AI-powered crop disease detection and live chatbot support, serving 50+ coconut farmers in Quezon. Managed sprints and cross-functional team collaboration.</p>
+          <p><em>Tech:</em> React, Node.js, MongoDB, Python, Socket.io</p>
         </div>
 
         <div class="project">
-          <h3>NiyogHub Blog App</h3>
-          <p>
-            Full-stack blogging platform with user authentication, CRUD
-            functionality, and notifications.
-          </p>
-          <p><em>Tech Used:</em> React, Tailwind CSS, Express, MongoDB</p>
-          <p>
-            <a
-              href="https://github.com/eligiorbautista/niyoghub-blog.git"
-              target="_blank"
-              >View on GitHub</a
-            >
-          </p>
+          <h3><a href="https://github.com/eligiorbautista/niyoghub-blog.git" target="_blank">NiyogHub Blog App</a></h3>
+          <p>Built a companion blog app with full user auth and CRUD capabilities for sharing agricultural news and updates, integrated with the NiyogHub ecosystem.</p>
+          <p><em>Tech:</em> React, Tailwind CSS, Express, MongoDB</p>
         </div>
 
         <div class="project">
           <h3>HRMS with Payroll</h3>
-          <p>
-            Human Resource Management System with integrated payroll module
-            developed during internship.
-          </p>
-          <p><em>Tech Used:</em> JavaScript, TypeScript, Laravel, MySQL</p>
+          <p>Engineered an HR system with integrated payroll and time tracking. Contributed during internship by testing modules and preparing documentation that improved reporting speed by 40%.</p>
+          <p><em>Tech:</em> JavaScript, TypeScript, Laravel, MySQL</p>
         </div>
 
         <div class="project">
-          <h3>Tanglaw – Smart Energy Dashboard</h3>
-          <p>
-            High-fidelity prototype for visualizing building energy consumption
-            and promoting sustainability.
-          </p>
-          <p><em>Tech Used:</em> React, Figma, Chart.js</p>
-          <p>
-            <a
-              href="https://www.figma.com/design/IwjabechMTnVx3043rZHch/Tanglaw.--Copy---Copy---Copy-?m=auto&t=OugEpNX1ObtcIADF-1"
-              target="_blank"
-              >View on Figma</a
-            >
-          </p>
+          <h3><a href="https://www.figma.com/design/IwjabechMTnVx3043rZHch/Tanglaw.--Copy---Copy---Copy-?m=auto" target="_blank">Tanglaw – Smart Energy Dashboard</a></h3>
+          <p>Led UI/UX prototyping for sustainability dashboard. Demonstrated dashboard to 3 departments, increasing student involvement in environmental programs by 25%.</p>
+          <p><em>Tech:</em> Figma, React, Chart.js</p>
         </div>
 
         <div class="project">
-          <h3>BotoXplorer</h3>
-          <p>
-            An informative voting awareness and decision-making web app that
-            helps users explore candidates and issues aligned with their values.
-          </p>
-          <p><em>Tech Used:</em> React, Express, MongoDB, Tailwind CSS</p>
-          <p>
-            <a
-              href="https://www.figma.com/design/vMqdrm2OW06hl6pFx86ilc/BOTOXPLORE?node-id=0-1&t=OugEpNX1ObtcIADF-1"
-              target="_blank"
-              >View on Figma</a
-            >
-          </p>
+          <h3><a href="https://www.figma.com/design/vMqdrm2OW06hl6pFx86ilc/BOTOXPLORE?node-id=0-1" target="_blank">BotoXplorer (Prototype)</a></h3>
+          <p>Created a mobile prototype for youth voter education. Gained feedback from 30+ students and used it to improve civic tech awareness proposals for classroom integration.</p>
+          <p><em>Tech:</em> Figma</p>
         </div>
 
         <div class="project">
-          <h3>Filheim Website – Freelance</h3>
-          <p>
-            Corporate website for luxury cabinetry with content management using
-            Strapi for scalable backend operations.
-          </p>
-          <p><em>Tech Used:</em> React, Strapi, Tailwind CSS</p>
-          <p>
-            <a href="https://www.filheim.com" target="_blank">Visit Website</a>
-          </p>
+          <h3><a href="https://www.filheim.com" target="_blank">Filheim Website – Freelance</a></h3>
+          <p>Delivered a CMS-driven corporate site for a luxury cabinetry firm. Completed deployment in under 3 weeks and handled client walkthroughs and training.</p>
+          <p><em>Tech:</em> React, Tailwind CSS, Strapi</p>
         </div>
 
         <div class="project">
-          <h3>Sycip Builders Website – Freelance</h3>
-          <p>
-            Sister company of filheim - Static business website for a local
-            construction company developed with Webflow to meet modern,
-            responsive design standards.
-          </p>
-          <p><em>Tech Used:</em> Webflow</p>
-          <p>
-            <a href="https://www.sycipbuilders.com" target="_blank"
-              >Visit Website</a
-            >
-          </p>
+          <h3><a href="https://www.sycipbuilders.com" target="_blank">Sycip Builders Website – Freelance</a></h3>
+          <p>Developed static Webflow-based construction company site with optimized responsiveness and SEO-friendly design, resulting in improved traffic and inquiries.</p>
+          <p><em>Tech:</em> Webflow</p>
         </div>
+      </section>
+
+      <section>
+        <h2>Work Experience</h2>
+        <ul>
+          <li><strong>Full-stack Developer Intern</strong> – Dowinn Resources Inc. (January–May 2025)<br />
+          Led the development of an HR Management System with my co-interns. Conducted QA testing, created documentation, and supported deployment preparation while participating in Agile sprint and studying Udemy courses for both hardware and software.</li>
+
+          <li><strong>VA Junior Analyst & Web developer </strong> – Compete in Goodness Foundation (Part-Time, December 2024-May2025)<br />
+          I supported the team primarily in web content management and internal automation tasks. I was responsible for updating and maintaining web pages, assisting in the development of internal platforms using Microsoft Power Automate, and ensuring documentation was consistently organized and up-to-date. </li>
+
+          <li><strong>Freelance Web Developer</strong> – Remote (2025-present)<br />
+          Built full-stack websites for clients. Responsible for requirements gathering, sprint planning, and UI/UX design. Delivered on time and supported post-launch iterations.</li>
+        </ul>
       </section>
     </main>
   </body>
