Update portfolio content again and summary

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="project">
           <h3><a href="https://niyoghub.com" target="_blank">NiyogHub – Capstone Project</a></h3>
-          <p>Developed and launched a precision agriculture web and mobile system with AI-powered crop disease detection and live chatbot support, serving 50+ coconut farmers in Quezon. Managed sprints and cross-functional team collaboration.</p>
+          <p>Developed and launched a precision agriculture web and mobile system with AI-powered crop disease detection and live chatbot support, serving coconut farmers in Quezon. Managed sprints and cross-functional team collaboration.</p>
           <p><em>Tech:</em> React, Node.js, MongoDB, Python, Socket.io</p>
         </div>
 
@@ -104,19 +104,19 @@
 
         <div class="project">
           <h3>HRMS with Payroll</h3>
-          <p>Engineered an HR system with integrated payroll and time tracking. Contributed during internship by testing modules and preparing documentation that improved reporting speed by 40%.</p>
+          <p>Engineered an HR system with integrated payroll and time tracking. Contributed during internship by doing the front-end, testing module, and preparing documentation that improved reporting speed by 40%.</p>
           <p><em>Tech:</em> JavaScript, TypeScript, Laravel, MySQL</p>
         </div>
 
         <div class="project">
           <h3><a href="https://www.figma.com/design/IwjabechMTnVx3043rZHch/Tanglaw.--Copy---Copy---Copy-?m=auto" target="_blank">Tanglaw – Smart Energy Dashboard</a></h3>
-          <p>Led UI/UX prototyping for sustainability dashboard. Demonstrated dashboard to 3 departments, increasing student involvement in environmental programs by 25%.</p>
+          <p>Led UI/UX prototyping for sustainability dashboard. Demonstrated dashboard to larger infrastructures in the province. Led the team and documentation. </p>
           <p><em>Tech:</em> Figma, React, Chart.js</p>
         </div>
 
         <div class="project">
           <h3><a href="https://www.figma.com/design/vMqdrm2OW06hl6pFx86ilc/BOTOXPLORE?node-id=0-1" target="_blank">BotoXplorer (Prototype)</a></h3>
-          <p>Created a mobile prototype for youth voter education. Gained feedback from 30+ students and used it to improve civic tech awareness proposals for classroom integration.</p>
+          <p>Created a mobile prototype for youth voter education. Gained feedback from co-youth leaders and used it to improve civic tech awareness proposals for classroom integration through storytelling and gamification.</p>
           <p><em>Tech:</em> Figma</p>
         </div>
 
@@ -128,7 +128,7 @@
 
         <div class="project">
           <h3><a href="https://www.sycipbuilders.com" target="_blank">Sycip Builders Website – Freelance</a></h3>
-          <p>Developed static Webflow-based construction company site with optimized responsiveness and SEO-friendly design, resulting in improved traffic and inquiries.</p>
+          <p>Developed static Webflow-based construction company site with optimized responsiveness and SEO-friendly design.</p>
           <p><em>Tech:</em> Webflow</p>
         </div>
       </section>
